--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,7 @@ PORT=5000
 MONGODB_URI=mongodb+srv://aniketsingh2004ak:VGBSNzSHywLbnBVW@cluster0.4flglh2.mongodb.net/own-todo?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=dhjdfuhdk9673_8j7ek083jei
 NODE_ENV=development
+
+UPSTASH_REDIS_REST_URL=https://awake-escargot-18920.upstash.io
+UPSTASH_REDIS_REST_TOKEN=AUnoAAIjcDE4NWE3M2ZlOGY1OGI0NTRiYTQ2NTgwOTQ2Nzk5NTIzNXAxMA
+
